# job-hunter-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  JOBS_PLATFORMS.md  README.md  RESUME.md  config.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup-model.sh
job_hunter_tools/: cover_letter.py  job_scraper.py  resume_generator.py
sample/: RESUME.example.md
skills/guided-interview/: SKILL.md
skills/job-hunter/: SKILL.md
templates/: email.en.html  email.pt-br.html  resume.en.html  resume.pt-br.html
workspace/: .gitignore  HEARTBEAT.md  USER.md
workspace_files/: AGENTS.md  SOUL.md
